--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ERIK THORSELL</title>
-    <link rel="icon" href="../CSS/assets/PRINCESSTYCOON.PNG" type="image/x-icon">
-    <link rel="stylesheet" href="../CSS/main.css">
-    <link rel="stylesheet" href="../CSS/index.css">
+    <link rel="icon" href="./CSS/assets/PRINCESSTYCOON.PNG" type="image/x-icon">
+    <link rel="stylesheet" href="./CSS/main.css">
+    <link rel="stylesheet" href="./CSS/index.css">
 </head>
 <body>
     <nav>
         <a href="index.html"><h1>THORSELL</h1></a>
         <hr>
-        <a href="about.html"><h2>ABOUT</h2></a>
-        <a href="school.html"><h2>SCHOOL</h2></a>
-        <a href="interests.html"><h2>INTERESTS</h2></a>
+        <a href=".\HTML\about.html"><h2>ABOUT</h2></a>
+        <a href=".\HTML\school.html"><h2>SCHOOL</h2></a>
+        <a href=".\HTML\interests.html"><h2>INTERESTS</h2></a>
     </nav>
     <section>
-        <img src="../CSS/assets/profilbild.jpg" alt="A picture of me">
+        <img src="./CSS/assets/profilbild.jpg" alt="A picture of me">
 
         <h1>ERIK THORSELL</h1>
         <h3>FULLSTACK SOFTWARE DEVELOPER</h3>
