removed html folder

--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOUT - ERIK THORSELL</title>
-    <link rel="icon" href="../CSS/assets/PRINCESSTYCOON.PNG" type="image/x-icon">
-    <link rel="stylesheet" href="../CSS/main.css">
+    <link rel="icon" href="./CSS/assets/PRINCESSTYCOON.PNG" type="image/x-icon">
+    <link rel="stylesheet" href="./CSS/main.css">
     <link rel="stylesheet" href="../CSS/about.css">
 </head>
 <body>
@@ -28,19 +28,19 @@
         <ul>
             <li>
                 <a href="https://www.python.org/">
-                    <img src="..\CSS\assets\python-original.svg" alt="Python logo">
+                    <img src=".\CSS\assets\python-original.svg" alt="Python logo">
                 </a>
                 <h4>PYTHON</h4>
             </li>
             <li>
                 <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">
-                    <img src="..\CSS\assets\javascript-original.svg" alt="JavaScript logo">
+                    <img src=".\CSS\assets\javascript-original.svg" alt="JavaScript logo">
                 </a>
                 <h4>JS</h4>
             </li>
             <li>
                 <a href="https://luau.org/">
-                    <img src="..\CSS\assets\lua-original.svg" alt="LUAU logo">
+                    <img src=".\CSS\assets\lua-original.svg" alt="LUAU logo">
                 </a>
                 <h4>LUAU</h4>
             </li>
