--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTACT - ERIK THORSELL</title>
-    <link rel="stylesheet" href="../CSS/main.css">
-    <link rel="stylesheet" href="../CSS/contact.css">
-    <link rel="icon" href="../CSS/assets/PRINCESSTYCOON.PNG" type="image/x-icon">
+    <link rel="stylesheet" href="./CSS/main.css">
+    <link rel="stylesheet" href="./CSS/contact.css">
+    <link rel="icon" href="./CSS/assets/PRINCESSTYCOON.PNG" type="image/x-icon">
 </head>
 <body>
     <nav>
@@ -24,7 +24,7 @@
             <input type="submit" value="SEND">
         </form>
         <div>
-            <img src="../CSS/assets/profilbild.jpg" alt="A picture of me">
+            <img src="./CSS/assets/profilbild.jpg" alt="A picture of me">
             <a href="#" class="link" target="_blank">DOWNLOAD MY CV</a>
         </div>
     </div>
