--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav>
         <a href="index.html"><h1>THORSELL</h1></a>
         <hr>
-        <a href=".\HTML\about.html"><h2>ABOUT</h2></a>
-        <a href=".\HTML\school.html"><h2>SCHOOL</h2></a>
-        <a href=".\HTML\interests.html"><h2>INTERESTS</h2></a>
+        <a href="about.html"><h2>ABOUT</h2></a>
+        <a href="school.html"><h2>SCHOOL</h2></a>
+        <a href="interests.html"><h2>INTERESTS</h2></a>
     </nav>
     <section>
         <img src="./CSS/assets/profilbild.jpg" alt="A picture of me">
