--- a/school.html
+++ b/school.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCHOOL - ERIK THORSELL</title>
-    <link rel="stylesheet" href="../CSS/main.css">
-    <link rel="stylesheet" href="../CSS/school.css">
-    <link rel="icon" href="../CSS/assets/PRINCESSTYCOON.PNG" type="image/x-icon">
+    <link rel="stylesheet" href="./CSS/main.css">
+    <link rel="stylesheet" href="./CSS/school.css">
+    <link rel="icon" href="./CSS/assets/PRINCESSTYCOON.PNG" type="image/x-icon">
 </head>
 <body>
     <nav>
@@ -25,7 +25,7 @@
         <h2>ABOUT THE SCHOOL</h2>
         <div id="container">
             <p>NTI Kronhus is a school located in Gothenburg, Sweden. It is a school that focuses on IT and technology. The school offers a variety of programs, such as Fullstack Developer, System Developer, and IT Technician. The school is located in the city center of Gothenburg, which makes it easy to get to by public transportation.</p>
-            <img src="../CSS/assets/ntiHighQuality.png" alt="A picture of NTI Kronhus">
+            <img src="./CSS/assets/ntiHighQuality.png" alt="A picture of NTI Kronhus">
         </div>
         <button class="contact-me" onclick="window.location.href='contact.html'">CONTACT ME</button>
     </section>
