--- a/404.html
+++ b/404.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - ERIK THORSELL</title>
-    <link rel="icon" href="../CSS/assets/PRINCESSTYCOON.PNG" type="image/x-icon">
-    <link rel="stylesheet" href="../CSS/main.css">
-    <link rel="stylesheet" href="../CSS/404.css">
+    <link rel="icon" href="./CSS/assets/PRINCESSTYCOON.PNG" type="image/x-icon">
+    <link rel="stylesheet" href="./CSS/main.css">
+    <link rel="stylesheet" href="./CSS/404.css">
 </head>
 <body>
     <h1>Oops!</h1>
