--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>ABOUT - ERIK THORSELL</title>
     <link rel="icon" href="./CSS/assets/PRINCESSTYCOON.PNG" type="image/x-icon">
     <link rel="stylesheet" href="./CSS/main.css">
-    <link rel="stylesheet" href="../CSS/about.css">
+    <link rel="stylesheet" href="./CSS/about.css">
 </head>
 <body>
     <nav>
